--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -125,6 +125,74 @@
             height: 30px; 
             cursor: pointer;
         }
+        @media only screen and (max-width: 600px) {
+    body {
+        padding: 0.5em;
+    }
+
+    header {
+        padding: 1em;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #logo {
+        margin-top: 10px;
+    }
+
+    nav {
+        margin-top: 10px;
+        text-align: center; 
+    }
+
+    nav a {
+        display: block;
+        margin-bottom: 0.5em;
+        padding: 0.5em;
+    }
+
+    section {
+        flex-direction: column;
+        padding: 2em 1em;
+        align-items: center; 
+    }
+
+    #about-me {
+        max-width: 100%;
+        text-align: center; 
+    }
+
+    #about-me h1 {
+        font-size: 24px;
+    }
+
+    #about-me p {
+        font-size: 14px;
+        line-height: 1.5;
+    }
+
+    #education {
+        max-width: 100%;
+        text-align: center; 
+    }
+
+    .education-entry {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .education-entry hr {
+        margin: 1em 0;
+    }
+
+    .resume-box {
+        margin-top: 20px;
+    }
+
+    .contact-entry {
+        margin-bottom: 1em;
+    }
+}
     </style>
 </head>
 <body >
